# ipecamera

./: .bzrignore  .gitignore  CMakeLists.txt  ToDo  base.c  base.h  cli.c  cmosis.c  cmosis.h  data.c  env.c  env.h  events.c  ipecamera.h  ipecamera.pc.in  ipecamera.spec.in  model.c  model.h  pci.c  pci.h  private.h  reader.c  reader.h  version.h.in
apps/: CMakeLists.txt  grab.c
dma/: ipe.c
docs/: desy20.txt  sensors.txt
ipecamera/: data.c  events.c  ipecamera.c  model.h  private.h  reader.c
scripts/: extract.sh  list.sh
tests/: autotrigger.sh  stimuli20.sh
tests/debug/: incomplete.sh
tests/ipecamera/: autotrigger.sh
